<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/main_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewWallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo_description"
        android:scaleType="centerCrop"
        android:src="@drawable/wall"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_qr_scan"
        android:layout_width="145dp"
        android:layout_height="146dp"
        android:layout_marginTop="552dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:foreground="@drawable/camera"
        android:text="@string/nothing"
        android:textColorLink="#494949"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="346dp"
        android:layout_height="233dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/halloween_2"
        android:foregroundTint="#FFFFFF"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_view" />

    <Button
        android:id="@+id/btnStartFear"
        android:layout_width="131dp"
        android:layout_height="100dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#00FFFFFF"
        android:foreground="@drawable/btnstartfear"
        android:text="@string/nothing"
        app:layout_constraintBottom_toTopOf="@+id/button_qr_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_no_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/text_no_touch"
        android:fontFamily="@font/halloween_2"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toEndOf="@+id/button_qr_scan" />

    <TextView
        android:id="@+id/bubble_text"
        android:layout_width="82dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bubble_background"
        android:fontFamily="@font/halloween_2"
        android:text="@string/bubble_text"
        android:textAlignment="center"
        android:textColor="#222"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStartFear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="@+id/main_view"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintVertical_bias="0.985" />


</androidx.constraintlayout.widget.ConstraintLayout>